--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -8,6 +10,7 @@ android {
     compileSdk 33
 
     defaultConfig {
+        buildConfigField("String", "KEY", '"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"')
         applicationId "com.example.githubproject"
         minSdk 21
         targetSdk 33
@@ -39,7 +42,7 @@ android {
 }
 
 dependencies {
-
+    implementation "androidx.fragment:fragment-ktx:1.5.6"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation "androidx.activity:activity-ktx:1.7.0"
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -55,4 +58,13 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
+
+    def roomVersion = '2.2.6'
+    implementation "androidx.room:room-runtime:$roomVersion"
+    annotationProcessor "androidx.room:room-compiler:$roomVersion"
+    androidTestImplementation "androidx.room:room-testing:$roomVersion"
+    implementation "androidx.room:room-ktx:$roomVersion"
+    kapt "androidx.room:room-compiler:$roomVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
 }
