--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     compileSdk 33
 
     defaultConfig {
-        buildConfigField("String", "KEY", '"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"')
+        buildConfigField("String", "KEY", '"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"')
         applicationId "com.example.githubproject"
         minSdk 21
         targetSdk 33
@@ -42,29 +42,47 @@ android {
 }
 
 dependencies {
-    implementation "androidx.fragment:fragment-ktx:1.5.6"
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation "androidx.activity:activity-ktx:1.7.0"
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    //testing
+    implementation 'androidx.test.espresso:espresso-contrib:3.5.1'
+    androidTestImplementation 'androidx.test:runner:1.5.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test:rules:1.5.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    implementation "com.squareup.retrofit2:retrofit:2.6.2"
-    implementation "com.squareup.retrofit2:converter-gson:2.6.2"
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation "com.github.bumptech.glide:glide:4.11.0"
-    implementation 'com.google.android.material:material:1.0.0'
-    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
 
-    def roomVersion = '2.2.6'
-    implementation "androidx.room:room-runtime:$roomVersion"
-    annotationProcessor "androidx.room:room-compiler:$roomVersion"
-    androidTestImplementation "androidx.room:room-testing:$roomVersion"
-    implementation "androidx.room:room-ktx:$roomVersion"
-    kapt "androidx.room:room-compiler:$roomVersion"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
+
+    //room and livecycle
+    implementation 'androidx.room:room-runtime:2.5.1'
+    kapt 'androidx.room:room-compiler:2.5.1'
+    implementation "androidx.room:room-ktx:2.5.1"
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
+    implementation "androidx.activity:activity-ktx:1.7.1"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.1"
+
+
+    //fragment
+    implementation "androidx.fragment:fragment-ktx:1.5.6"
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+
+    //retrofit and couroutnie
+    implementation 'com.github.bumptech.glide:glide:4.13.1'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
+
+    //others
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
 }
