--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,19 @@
         android:theme="@style/Theme.GithubProject"
         tools:targetApi="31">
         <activity
+            android:name=".usif.main.MainActivity"
+            android:exported="true" />
+        <activity
+            android:name=".usif.setting.SettingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".usif.favorite.FavUserActivity"
+            android:exported="false" />
+        <activity
             android:name=".usif.detail.UserDetailActivity"
             android:exported="false" />
         <activity
-            android:name=".usif.main.MainActivity"
+            android:name=".usif.main.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,6 +34,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
